force-app/main/default/objects/Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Event__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Universal Studios</fullName>
            </value>
            <value>
                <fullName>Walt Disney World</fullName>
            </value>
            <value>
                <fullName>Sea World</fullName>
            </value>
            <value>
                <fullName>Resort Buffet Breakfast</fullName>
            </value>
            <value>
                <fullName>Resort Counter Service Breakfast</fullName>
            </value>
            <value>
                <fullName>Specialty Breakfast</fullName>
            </value>
            <value>
                <fullName>Pep Rally Breakfast</fullName>
            </value>
            <value>
                <fullName>Pre Game Pasta Meal</fullName>
            </value>
            <value>
                <fullName>Box Lunch</fullName>
            </value>
            <value>
                <fullName>Hard Rock Cafe</fullName>
            </value>
            <value>
                <fullName>Fogo De Chao</fullName>
            </value>
            <value>
                <fullName>NBC Grille</fullName>
            </value>
            <value>
                <fullName>Rainforest Cafe</fullName>
            </value>
            <value>
                <fullName>Kobe Steakhouse</fullName>
            </value>
            <value>
                <fullName>Margaritaville</fullName>
            </value>
            <value>
                <fullName>Pizza Party</fullName>
            </value>
            <value>
                <fullName>Toothsome Chocolate Factory</fullName>
            </value>
            <value>
                <fullName>Birthday Cake</fullName>
            </value>
            <value>
                <fullName>Universal Orlando - Meal Coupon</fullName>
            </value>
            <value>
                <fullName>DisneyWorld  - Meal Coupon</fullName>
            </value>
            <value>
                <fullName>Sea World - Meal Coupon</fullName>
            </value>
            <value>
                <fullName>Celebration of Athletes</fullName>
            </value>
            <value>
                <fullName>Unlimited Beverage Mug</fullName>
            </value>
            <value>
                <fullName>Resort Lunch Vouchers</fullName>
            </value>
            <value>
                <fullName>Resort Dinner Vouchers</fullName>
            </value>
            <value>
                <fullName>Resort Counter Breakfast</fullName>
            </value>
            <value>
                <fullName>Pre Game Past Meal</fullName>
            </value>
            <value>
                <fullName>Team Movie</fullName>
            </value>
            <value>
                <fullName>Disney World Performance</fullName>
            </value>
            <value>
                <fullName>Disney World Workshop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>