force-app/main/default/objects/Event__c/fields/GL_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>GL_Opportunity__c</fullName>
    <label>GL Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Specialty_Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>