force-app/main/default/objects/Event__c/fields/Theme_Park_Package__c.field-meta.xml
<CustomField>
    <fullName>Theme_Park_Package__c</fullName>
    <label>Theme Park Package</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Event_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2 Park – 1 Day Park to Park</fullName>
            </value>
            <value>
                <fullName>2 Park – 2 Day park to Park</fullName>
            </value>
            <value>
                <fullName>2 Park – 3 Day Park to Park</fullName>
            </value>
            <value>
                <fullName>2 park – 4 Day Park to Park</fullName>
            </value>
            <value>
                <fullName>2 Park – 5 Day Park to Park</fullName>
            </value>
            <value>
                <fullName>3 park – 2 Day Park to Park</fullName>
            </value>
            <value>
                <fullName>3 Park – 3 Day Park to Park</fullName>
            </value>
            <value>
                <fullName>3 Park – 4 Day Park to Park</fullName>
            </value>
            <value>
                <fullName>3 Park – 5 Day Park to Park</fullName>
            </value>
            <value>
                <fullName>Volcano Bay - 1 Day</fullName>
            </value>
            <value>
                <fullName>1 Day Base</fullName>
            </value>
            <value>
                <fullName>1 Day park Hopper</fullName>
            </value>
            <value>
                <fullName>1 Day Premium</fullName>
            </value>
            <value>
                <fullName>2 Day Base</fullName>
            </value>
            <value>
                <fullName>2 Day Park Hopper</fullName>
            </value>
            <value>
                <fullName>2 Day Premium</fullName>
            </value>
            <value>
                <fullName>3 Day Base</fullName>
            </value>
            <value>
                <fullName>3 Day Park Hopper</fullName>
            </value>
            <value>
                <fullName>3 Day Premium</fullName>
            </value>
            <value>
                <fullName>4 Day Base</fullName>
            </value>
            <value>
                <fullName>4 Day Park Hopper</fullName>
            </value>
            <value>
                <fullName>4 Day Premium</fullName>
            </value>
            <value>
                <fullName>1 Day</fullName>
            </value>
            <value>
                <fullName>1 Day Aquatica</fullName>
            </value>
            <value>
                <fullName>1 Day Combo</fullName>
            </value>
            <value>
                <fullName>2 Day Combo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>